@@ -456,14 +456,26 @@ require(rstan)
 install.packages("runjags", type = "source")
 require(rstan)
 require(Stan)
-sourceDir <- function (path, pattern = "\\.[rR]$", env = NULL, chdir = TRUE)
-{
-files <- sort(dir(path, pattern, full.names = TRUE))
-lapply(files, source, chdir = chdir)
-}
-require(runjags)
-require(coda)
-require(rstan)
-#windows
-sourceDir("Windows/BANOVA_v1.1/BANOVA_R/R")
+a <- array(0, dim = c(2,3), dimnames = list(NULL, c('x','y','z')))
+a
+a[,'y']
+a[,-2]
+a
+a
+cbind(a, 0
+)
+cbind(a, list(t = 0))
+a[1,1] <- 5
+a
+subset(a, a[,'x'] == 5)
+as.matrix(subset(a, a[,'x'] == 5))
+nrow(as.matrix(subset(a, a[,'x'] == 5)))
+nrow(subset(a, a[,'x'] == 5))
+is.character(c(1,2,3))
+is.character(as.factor(c(1,2,3))
+)
 setwd("C:/Users/CDONG/Google Drive/Dropbox/Rweb/NewCode/codeForPackage/Windows/BANOVA_v1.1/BANOVA_R/R")
+options(contrasts = rep("contr.sum",2))
+?options
+getOption("contrasts")
+getOption("contrasts")
